--- a/module/desktop/public/css/desktop.css
+++ b/module/desktop/public/css/desktop.css
@@ -67,5 +67,27 @@ desktop {
     background-color: white; }
   desktop .shadow {
     box-shadow: 5px 5px 5px; }
+  desktop [id$=Bar] {
+    position: absolute; }
+    desktop [id$=Bar] .slide {
+      background-color: #006db3;
+      display: flex;
+      flex: 0;
+      justify-content: center;
+      align-items: center; }
+      desktop [id$=Bar] .slide li {
+        list-style: none;
+        cursor: pointer; }
+  desktop #sideBar {
+    height: 100vh;
+    width: 2%;
+    display: flex; }
+    desktop #sideBar .slide {
+      flex-direction: column;
+      margin-right: 2%; }
+  desktop #downBar {
+    height: 2vh;
+    width: 100%;
+    bottom: 0; }
 
 /*# sourceMappingURL=desktop.css.map */
