--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -20,4 +20,33 @@ desktop {
 	.shadow {
 		box-shadow: 5px 5px 5px;
 	}
+	[id$=Bar]{
+		position: absolute;
+		.slide {
+			background-color: $color3;
+			display: flex;
+			flex: 1-1;
+			justify-content: center;
+			align-items: center;
+			li {
+				list-style:none;
+				cursor:pointer;
+			}
+		}
+	}
+	#sideBar {
+		height: 100vh;
+		width: 2%;
+		display: flex;
+		.slide {
+			flex-direction: column;
+			margin-right: 2%;
+		}
+	}
+	#downBar {
+		height: 2vh;
+		width: 100%;
+		bottom:0;
+	}
+		
 }
