--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -3,7 +3,7 @@ $color2: #039be5;
 $color3: #006db3;
 $font: sans-serif;
 //$color1: black;
-$menuHeight: 5vh;
+$menuHeight: 5%;
 $selected_color: lightblue;
-$footerHeight: 10vh;
+$footerHeight: 10%;
 *{margin:0;padding:0}
