--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,46 +48,4 @@ body {
       width: 100%;
       height: 20%; }
 
-desktop {
-  background-color: #63ccff;
-  background-image: url("%backgroundUri%");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  height: 100vh;
-  width: 100%;
-  font-family: sans-serif;
-  display: block; }
-  desktop #modal {
-    display: none;
-    position: absolute;
-    top: 20vh;
-    left: 45vw;
-    width: 20vw;
-    background-color: white; }
-  desktop .shadow {
-    box-shadow: 5px 5px 5px; }
-  desktop [id$=Bar] {
-    position: absolute; }
-    desktop [id$=Bar] .slide {
-      background-color: #006db3;
-      display: flex;
-      flex: 0;
-      justify-content: center;
-      align-items: center; }
-      desktop [id$=Bar] .slide li {
-        list-style: none;
-        cursor: pointer; }
-  desktop #sideBar {
-    height: 100vh;
-    width: 2%;
-    display: flex; }
-    desktop #sideBar .slide {
-      flex-direction: column;
-      margin-right: 2%; }
-  desktop #downBar {
-    height: 2vh;
-    width: 100%;
-    bottom: 0; }
-
-/*# sourceMappingURL=desktop.css.map */
+/*# sourceMappingURL=style.css.map */
