--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@ img {width: 100%;}
 body {
 	font-family: sans-serif;
 	overflow: hidden;
-	#contentMenu {
+	#contextMenu {
 		display: none;
 		position: absolute;
 		top: 0;
