Allow to change the image of background and minify the filesytem them Allow to load external html with the plugins Clean the modal/index.js file Create new method to mongoDB library to allow update values on the bbdd Adap the topbar of filesystem to vue's library

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,12 @@ body {
           color: #fff; }
   body .shadow {
     box-shadow: 5px 5px 5px; }
+  body .minify {
+    width: 0px;
+    height: 0px;
+    top: 100vh;
+    left: 50vw;
+    transition-duration: .75s; }
   body #modal {
     position: absolute;
     width: 20vw;
