--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,13 @@ body {
 	.shadow {
 		box-shadow: 5px 5px 5px;
 	}
+	.minify {
+		width: 0px;
+		height: 0px;
+		top: 100vh;
+		left: 50vw;
+		transition-duration: .75s;
+	}
 	#modal{
 		position: absolute;
 		width: 20vw;
