allow to change the image of background and minify the filesytem them Allow to load external html with the plugins Clean the modal/index.js file Create new method to mongoDB library to allow update values on the bbdd Adap the topbar of filesystem to vue's library Change the identify of the session to a key generate by the time and user's id save in a cookie. Show the content of the file if it is a image on the filesystem Delte commonModules/server

--- a/scss/filesystem.scss
+++ b/scss/filesystem.scss
@@ -8,7 +8,7 @@ filesystem{
 	background-color: lightgray;
 	box-shadow: 5px 5px 5px;
 	ul.topBar {
-		width: 100%;
+		width: 80%;
 		float: left;
 		border-bottom:2px solid $color1;
 		height: $menuHeight;
@@ -33,6 +33,10 @@ filesystem{
 			list-style: none;
 			width: 100%;
 		}
+	}
+	ul#options {
+		width: 20%;
+		li { font-weight: initial; }
 	}
 	main {
 		float: left;
