finish the chat

--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -1,6 +1,7 @@
-$color1: #63ccff;
+$light_blue: #63ccff;
 $color2: #039be5;
 $color3: #006db3;
+$green: #A0F58B;
 $font: sans-serif;
 //$color1: black;
 $menuHeight: 5%;
