--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -5,7 +5,7 @@ chat{
 	left: 0;
 	width: 40%;
 	height: 25vh;
-	background-color: $color1;
+	background-color: lightgray;
 	header{
 		position: absolute;
 		top: 0;
@@ -49,6 +49,33 @@ chat{
 			flex-grow: 1;
 			background-color: #f3f3f3;
 			width: 80%;
+			overflow-y: auto;
+			overflow-x: hidden;
+			div {				
+				float: left;
+				width: 100%;
+				.message {
+					float: right;
+					max-width: 45%;
+					background-color: $light_blue;
+					padding: 2.5%;
+					margin: 2.5%;
+					border-radius: 15px 15px;
+				}
+				.time {
+					color: white;
+					font-size: 8pt;
+					margin-right: 5px;
+				}
+
+			}
+			div.own{
+				.message{
+					float: left;
+					background-color: $green;
+				}
+			}
+
 		}
 		input {
 			flex-basis: 0;
