Integrate the chat with the rest of the app and make some scss changes

--- a/module/desktop/public/css/desktop.css
+++ b/module/desktop/public/css/desktop.css
@@ -2,52 +2,6 @@
   margin: 0;
   padding: 0; }
 
-* {
-  margin: 0;
-  padding: 0; }
-
-img {
-  width: 100%; }
-
-body {
-  font-family: sans-serif;
-  overflow: hidden; }
-  body #contextMenu {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 200px; }
-    body #contextMenu nav {
-      width: 100%;
-      background-color: #fff; }
-      body #contextMenu nav ul {
-        padding: 0;
-        margin: 0; }
-        body #contextMenu nav ul li {
-          padding: 2% 1%;
-          border: 1px solid #006db3;
-          border-width: 1px 0 1px 0;
-          color: #006db3;
-          list-style: none; }
-        body #contextMenu nav ul li:hover {
-          background-color: #006db3;
-          color: #fff; }
-  body .shadow {
-    box-shadow: 5px 5px 5px; }
-  body #modal {
-    position: absolute;
-    width: 20vw;
-    left: 40vh;
-    top: 20vh;
-    max-height: 20vh;
-    background-color: #d3d3d3;
-    overflow: auto; }
-    body #modal .header {
-      color: brown;
-      width: 100%;
-      height: 20%; }
-
 desktop {
   background-color: #63ccff;
   background-image: url("%backgroundUri%");
@@ -72,7 +26,7 @@ desktop {
     desktop [id$=Bar] .slide {
       background-color: #006db3;
       display: flex;
-      flex: 0;
+      flex: 1 1;
       justify-content: center;
       align-items: center; }
       desktop [id$=Bar] .slide li {
@@ -89,5 +43,8 @@ desktop {
     height: 2vh;
     width: 100%;
     bottom: 0; }
+    desktop #downBar .slide li {
+      flex-grow: 1;
+      text-align: center; }
 
 /*# sourceMappingURL=desktop.css.map */
