--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -1,8 +1,8 @@
 @import './vars.scss';
 chat{
 	position: absolute;
-	top: 0;
-	left: 0;
+	bottom: 2vh;
+	right: 0;
 	width: 40%;
 	height: 25vh;
 	background-color: lightgray;
