include the properties menu to the filesystem fix the bug on the coneccion at the filesystem module Adapt the load of external resources to make it more flexible and elegant. Now is load a external file, the content of it is not include direct on the dom as pass before Now the trash folder is create at the same time that the user is register

--- a/module/filesystem/external/properties/css/style.css
+++ b/module/filesystem/external/properties/css/style.css
@@ -1,2 +1,117 @@
-*{margin:0;padding:0}*{margin:0;padding:0}img{width:100%}body{font-family:sans-serif;overflow:hidden}body #contentMenu{display:none;position:absolute;top:0;left:0;width:200px}body #contentMenu nav{width:100%;background-color:#fff}body #contentMenu nav ul{padding:0;margin:0}body #contentMenu nav ul li{padding:2% 1%;border:1px solid #006db3;border-width:1px 0 1px 0;color:#006db3;list-style:none}body #contentMenu nav ul li:hover{background-color:#006db3;color:#fff}body .shadow{box-shadow:5px 5px 5px}body #modal{position:absolute;width:20vw;left:40vh;top:20vh;max-height:20vh;background-color:#d3d3d3;overflow:auto}body #modal .header{color:brown;width:100%;height:20%}body nav{width:100%;height:10vh;max-height:50px;float:left;display:flex;align-items:center;justify-content:center}body nav ul{display:flex;width:100%;position:relative}body nav ul li{list-style:none;flex-grow:1;text-align:center;cursor:pointer}body nav ul.cat1::after{content:"";position:absolute;border-bottom:2px solid #63ccff;bottom:0;width:33%;left:0%;transition-property:left;transition-duration:0.5s}body nav ul.cat2::after{content:"";position:absolute;border-bottom:2px solid #63ccff;bottom:0;width:33%;left:33.3%;transition-property:left;transition-duration:0.5s}body nav ul.cat3::after{content:"";position:absolute;border-bottom:2px solid #63ccff;bottom:0;width:33%;left:66.6%;transition-property:left;transition-duration:0.5s}body main{float:left;height:90vh;display:flex;overflow-y:hidden;width:300%;transition-property:margin-left;transition-duration:0.5s}body main section{flex-grow:1;flex-basis:0;display:flex;justify-content:center;align-items:center;flex-direction:column}body main section span.group{display:block;width:80%;display:flex;justify-content:center;align-items:center;flex-grow:1}body main section span.group p{display:inline-block;flex-grow:1;flex-basis:0;font-weight:700}body main section span.group p.data{font-weight:100}body main section span.group input,body main section span.group span{flex-grow:1;flex-basis:0;text-align:center}body main section span.group span.permission input[type="checkbox"],body main section span.group span.permission ruby,body main section span.group span.permission select{float:left;width:14%;position:relative}body main section span.group span.permission ruby:after{visibility:hidden;position:absolute;top:-10px;left:0;width:50px;content:"red";background-color:#63ccff;color:white;box-shadow:5px 5px 5px}body main section span.group span.permission ruby:hover:after{visibility:visible}body main section span.group span.permission select{width:auto}body main.cat1{margin:0}body main.cat2{margin-left:-100vw}body main.cat3{margin-left:-200vw}
+* {
+  margin: 0;
+  padding: 0; }
+
+modal {
+  position: absolute;
+  z-index: 4;
+  top: 20vh;
+  left: 45%;
+  background-color: white;
+  width: 400px;
+  height: 300px;
+  overflow-x: hidden;
+  box-shadow: 5px 5px 5px; }
+  modal nav {
+    width: 100%;
+    height: 10%;
+    max-height: 50px;
+    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    modal nav ul {
+      display: flex;
+      width: 100%;
+      position: relative; }
+      modal nav ul li {
+        list-style: none;
+        flex-grow: 1;
+        text-align: center;
+        cursor: pointer; }
+    modal nav ul.cat1::after {
+      content: "";
+      position: absolute;
+      border-bottom: 2px solid #63ccff;
+      bottom: 0;
+      width: 50%;
+      left: 0%;
+      transition-property: left;
+      transition-duration: 0.5s; }
+    modal nav ul.cat2::after {
+      content: "";
+      position: absolute;
+      border-bottom: 2px solid #63ccff;
+      bottom: 0;
+      width: 50%;
+      left: 50%;
+      transition-property: left;
+      transition-duration: 0.5s; }
+    modal nav ul.cat3::after {
+      content: "";
+      position: absolute;
+      border-bottom: 2px solid #63ccff;
+      bottom: 0;
+      width: 50%;
+      left: 100%;
+      transition-property: left;
+      transition-duration: 0.5s; }
+  modal main {
+    overflow-x: hidden;
+    float: left;
+    height: 90%;
+    display: flex;
+    width: 200%;
+    transition-property: margin-left;
+    transition-duration: 0.5s; }
+    modal main section {
+      flex-grow: 1;
+      flex-basis: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column; }
+      modal main section span.group {
+        display: block;
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1; }
+        modal main section span.group p {
+          display: inline-block;
+          flex-grow: 1;
+          flex-basis: 0;
+          font-weight: 700; }
+        modal main section span.group p.data {
+          font-weight: 100; }
+        modal main section span.group input, modal main section span.group span {
+          flex-grow: 1;
+          flex-basis: 0;
+          text-align: center; }
+        modal main section span.group span.permission input[type="checkbox"], modal main section span.group span.permission ruby, modal main section span.group span.permission select {
+          float: left;
+          width: 14%;
+          position: relative; }
+        modal main section span.group span.permission ruby:after {
+          visibility: hidden;
+          position: absolute;
+          top: -10px;
+          left: 0;
+          width: 50px;
+          content: "red";
+          background-color: #63ccff;
+          color: white;
+          box-shadow: 5px 5px 5px; }
+        modal main section span.group span.permission ruby:hover:after {
+          visibility: visible; }
+        modal main section span.group span.permission select {
+          width: auto; }
+  modal main.cat1 {
+    margin: 0; }
+  modal main.cat2 {
+    margin-left: -100%; }
+  modal main.cat3 {
+    margin-left: -200%; }
+
 /*# sourceMappingURL=style.css.map */
