Allow to resize the apps. Make the action of the specialbuttons (close, minify and maximify). change some elements of the chat style to adapt it to the rest of apps' style. Change the name of the filesystem scope. Before, it was mainScopem now is mainScope. Change the name of the domine to delfos.es and adapt all the conexion to it

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,11 +72,17 @@ body {
           color: #fff; }
   body .shadow {
     box-shadow: 5px 5px 5px; }
-  body .minify {
+  body .minify, body .minify * {
     width: 0px;
     height: 0px;
     top: 100vh;
     left: 50vw;
+    transition-duration: .75s; }
+  body .maximify {
+    width: 100vw !important;
+    height: 100vh !important;
+    top: 0 !important;
+    left: 0 !important;
     transition-duration: .75s; }
   body #modal {
     position: absolute;
