--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,13 +73,21 @@ body {
 	.shadow {
 		box-shadow: 5px 5px 5px;
 	}
-	.minify {
+	.minify, .minify * {
 		width: 0px;
 		height: 0px;
 		top: 100vh;
 		left: 50vw;
 		transition-duration: .75s;
 	}
+	.maximify {
+		width: 100vw!important;
+		height: 100vh!important;
+		top: 0!important;
+		left: 0!important;
+		transition-duration: .75s;
+	}
+		
 	#modal{
 		position: absolute;
 		width: 20vw;
