Change the name Delete some console.log and add others Allow the creation of folder droped something over a file change the way to rename some failes of folders (it has a fail when the name is delete, the folder or file is delete

--- a/scss/filesystem.scss
+++ b/scss/filesystem.scss
@@ -66,6 +66,17 @@ filesystem{
 				background-color: $selected_color;
 			}
 		}
+		#changeName {
+			width: 20%;
+			max-width: 150px;
+			position: absolute;
+			svg {
+				margin-bottom: -20%;
+				path {fill: $color3;};
+			}
+			input{margin-top: -50%;margin-left: 16%; width: 60%;height: 10px;}
+			
+		}
 	}	
 }
 
