--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -1,11 +1,14 @@
 @import './vars.scss';
-chat{
+chat.module{
 	position: absolute;
 	bottom: 2vh;
 	right: 0;
-	width: 40%;
-	height: 25vh;
-	background-color: lightgray;
+	left:inherit;
+	top:inherit;
+	width: 25%;
+	height: 40vh;
+	background-color:rgba(135,135,135,.5) ;
+	box-shadow: 0 0;
 	.header{
 		position: absolute;
 		top: 25px;
