--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,10 +74,10 @@ body {
 		box-shadow: 5px 5px 5px;
 	}
 	.minify, .minify * {
-		width: 0px;
-		height: 0px;
-		top: 100vh;
-		left: 50vw;
+		width: 0px!important;
+		height: 0px!important;
+		top: 100vh!important;
+		left: 50vw!important;
 		transition-duration: .75s;
 	}
 	.maximify {
