--- a/module/filesystem/external/properties/css/style.css
+++ b/module/filesystem/external/properties/css/style.css
@@ -12,7 +12,7 @@ modal {
   height: 300px;
   overflow-x: hidden;
   box-shadow: 5px 5px 5px; }
-  modal nav {
+  modal nav.menus {
     width: 100%;
     height: 10%;
     max-height: 50px;
@@ -20,16 +20,16 @@ modal {
     display: flex;
     align-items: center;
     justify-content: center; }
-    modal nav ul {
+    modal nav.menus ul {
       display: flex;
       width: 100%;
       position: relative; }
-      modal nav ul li {
+      modal nav.menus ul li {
         list-style: none;
         flex-grow: 1;
         text-align: center;
         cursor: pointer; }
-    modal nav ul.cat1::after {
+    modal nav.menus ul.cat1::after {
       content: "";
       position: absolute;
       border-bottom: 2px solid #63ccff;
@@ -38,7 +38,7 @@ modal {
       left: 0%;
       transition-property: left;
       transition-duration: 0.5s; }
-    modal nav ul.cat2::after {
+    modal nav.menus ul.cat2::after {
       content: "";
       position: absolute;
       border-bottom: 2px solid #63ccff;
@@ -47,7 +47,7 @@ modal {
       left: 50%;
       transition-property: left;
       transition-duration: 0.5s; }
-    modal nav ul.cat3::after {
+    modal nav.menus ul.cat3::after {
       content: "";
       position: absolute;
       border-bottom: 2px solid #63ccff;
