--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -21,7 +21,7 @@ modal {
 	height: 300px;
 	overflow-x: hidden;
 	box-shadow: $shadow;
-	nav {
+	nav.menus {
 		width: 100%;
 		height: 10%;
 		max-height: 50px;
