--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import './vars.scss';
 * {margin: 0;padding: 0;}
+li {list-style-type: none;}
 img {width: 100%;}
 body {
 	font-family: sans-serif;
@@ -14,7 +15,7 @@ body {
 		box-shadow: 5px 5px 5px;
 		border-radius: 15px 15px 0 0;
 		header {
-			background-color: $color3;
+			background-color: $middleTone;
 			width: 100%;
 			height: 25px;
 			border-radius: 15px 15px 0 0;
@@ -58,13 +59,13 @@ body {
 				margin: 0;
 				li {
 					padding: 2% 1%;
-					border: 1px solid $color3;
+					border: 1px solid $middleTone;
 					border-width: 1px 0 1px 0;
-					color: $color3;
+					color: $middleTone;
 					list-style: none;
 				}
 				li:hover {
-					background-color: $color3;
+					background-color: $middleTone;
 					color: #fff;
 				}
 			}
