--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -1,6 +1,6 @@
 @import './vars.scss';
 desktop {
-	background-color: $light_blue;
+	background-color: $lightTone;
 	background-image: url('%wallPaper%');
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -9,26 +9,85 @@ desktop {
 	width: 100%;
 	font-family: $font;	
 	display: block;
-	#menu {
+	#clock {
+		font-family: $metropolisBlack;
+		font-size: 72pt;
+		position: fixed;
+		top: 5%;
+		right: 5%;
+		text-align: center;
+		p:nth-child(2){margin: -72% 0; font-size: 130pt;}
+		opacity: .5;
+	}
+	#clock:hover {opacity:1};
+	#overflow {
+		background-color: $darkTone;
+		opacity: 0.5;
 		position: absolute;
-		left: -20%;
-		bottom: 0;
-		background-color: $light_blue;
-		width: 20%;
-		height: 40vh;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+	#menu {
+		z-index: 5;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100vh;
 		transition-property: left;
 		transition-duration: .75s;
 		display:flex;
+		flex-direction: column;
+		#taskBar {
+			background-color: $lightTone;
+			height: 25px;
+			svg {
+				height: 100%;
+				float: right;
+			}
+		}
 		#options {
-			flex-grow: 1;
+			position: absolute;
+			background-color: $middleTone;
+			width: 150px;
+			height: 150px;
+			top: 4%;
+			right: 0.5%;
+			#profilePicture{
+				margin: 0 auto;
+				background-image: url('%profilePicture%');
+				background-size: cover;
+				width: 50px;
+				height: 50px;
+			}
+			#settings {
+				margin: 9% auto;
+				li {width: 50%; margin: 10% 25%;color: $lightTone;text-align: right;}
+			}
+		
+		}
+		#programsList {
 			display: flex;
-			flex: 1 1;
+			flex-wrap: wrap;
+			li {
+				flex: 1 1 auto;
+				max-width: 150px;
+				margin: 2%;
+			}
+		}
+		/*
+		#options {
+			display: flex;
+			flex: 1 0;
 			flex-direction: row;
+			height: 100px;
+			background-color: $lightTone;
 			#profilePicture{
 				background-image: url('%profilePicture%');
 				background-size: cover;
-				width: 25%;
-				height: 25%;
+				width: 100px;
 			}
 			#settings{
 				flex-grow: 1;
@@ -36,19 +95,21 @@ desktop {
 					display: flex;
 					flex: 1 1;
 					flex-direction: row;
+					justify-content: center;
+					align-items: center;
+					height: 100%;
 					li {
 						list-style: none;
 						flex-grow: 1;
 					}
 				}
 			}
-		}
+		}*/
 		#apps {
 			display: grid;
-		//	grid-template-area: ;
 		}
 	}
-	#menu.visible { left:0% }
+	#menu.invisible, #overflow.invisible { display:none; }
 	#modal {
 		display: none;;
 		position: absolute;
@@ -57,9 +118,7 @@ desktop {
 		width: 20vw;
 		background-color: white;
 	}
-	.shadow {
-		box-shadow: 5px 5px 5px;
-	}
+	/*
 	[id$=Bar]{
 		position: absolute;
 		.slide {
@@ -83,17 +142,28 @@ desktop {
 			margin-right: 2%;
 		}
 	}
+	*/
 	#downBar {
-		height: 2vh;
+		position: absolute;
+		height: 5vh;
 		width: 100%;
 		bottom:0;
+		background-color: $middleTone;
+		z-index: 5;
 		#home {
-			flex-grow: 0;
+			flex: 0 1;
+			svg { width:50px; }
 		}
-		.slide li{
-			flex-grow: 1;
-			flex-basis:0;
-			text-align:center;
+		.slide {
+			display: flex;
+			flex: 1 1;
+			align-items: center;
+			li {
+				list-style:none;
+				cursor:pointer;
+				flex-grow: 1;
+				flex-basis:0;
+			}
 		}
 	}
 		
