--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -3,6 +3,7 @@ $color2: #039be5;
 $color3: #006db3;
 $green: #A0F58B;
 */
+@import './fonts.scss';
 $middleTone: #E32819;
 $lightTone:#F3EBD8; 
 $darkTone: #080A09;
@@ -23,3 +24,6 @@ $footerHeight: 10%;
 	}
 }
 *{margin:0;padding:0}
+.middle {fill: $middleTone; background-color: middleTone;}
+.dark {fill: $darkTone; background-color: darkTone;}
+.light {fill: $lightTone; background-color: lightTone;}
