--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -71,10 +71,11 @@ desktop {
 		#programsList {
 			display: flex;
 			flex-wrap: wrap;
+			margin: 2% 0;
 			li {
 				flex: 1 1 auto;
 				max-width: 150px;
-				margin: 2%;
+				margin:0 1%;
 			}
 		}
 		/*
