--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,36 +11,31 @@ body {
 		position: absolute;
 		top: 0;
 		left: 0;
-		background-color: lightgray;
-		box-shadow: 5px 5px 5px;
-		border-radius: 15px 15px 0 0;
+		background-color: $lightTone;
+		box-shadow: 8px 8px 15px;
 		header {
 			background-color: $middleTone;
 			width: 100%;
-			height: 25px;
-			border-radius: 15px 15px 0 0;
+			height: 50px;
 			text-align: center;
-			color: #d8d8d8;
+			color: $lightTone;
 			display: flex;
 			.programName {
 				flex-grow: 1;
 				flex-basis:0;
 				text-align: center;				
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 			nav {
 				display: flex;
-				width: 81px;
+				width: 100px;
+				align-items: center;
 				li {
-					width:23px;
 					margin: 0 1%;
-					height:23px;
-					border-radius: 50%;
 					list-style-type: none;
-					background-color: gray;								
 				}
-				li.close {background-color: red;}
-				li.min {background-color: yellow;}
-				li.max {background-color: green;}
 			}
 
 		}
