--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,7 +1,23 @@
 @import './vars.scss';
-#root.login{ background-color: $middleTone;}
-#root.info{ background-color: $lightTone;}
-#root.help{ background-color: $darkTone;}
+#root.login{ background-color: $middleTone; }
+#root.info{
+	background-color: $lightTone;
+	header nav li svg {
+		.dark { fill: $middleTone;}
+		.middle { fill: $lightTone;}
+		.line {stroke: $middleTone;}
+	} 
+	header nav li.active svg .middle{stroke: $darkTone;}
+}
+#root.help{
+	background-color: $darkTone;
+	header nav li svg {
+		.dark { fill: $lightTone;}
+		.middle { fill: $darkTone;}
+		.line {stroke: $lightTone;}
+	} 
+	header nav li.active svg .middle{stroke: $middleTone;}
+}
 #root{
 	width: 100vw;
 	height: 100vh;
@@ -10,22 +26,34 @@
 	header{
 		position: fixed;
 		width: 100%;
-		height: 20vh;
-		#logo {
-			font-size: 32pt;
-			color:$lightTone;
-		}
+		height: 9vh;
+		#logo {width: 15%;height: 100%; svg{width:100%}}
 		nav{
+			flex-grow: 1;
 			display:flex;
 			flex-direction: rown; 
+			align-items: center;
+			height: 100%;
+			width: 95%;
+			margin: 0 auto;
 			li {
 				color: $darkTone;
 				font-weight: 900;
 				flex-grow:1;
 				text-align: center;
+				height: 100%;
+				svg{
+					height: 100%;
+					.line {
+						fill:none;
+						stroke:$darkTone;
+						stroke-miterlimit:10;
+						stroke-width:5.17px;
+					}
+				}
 			}
 			li.active{
-				color: $middleTone;
+				svg .middle {fill: $lightTone;}	
 			}
 		}
 	}
