--- a/scss/login.scss
+++ b/scss/login.scss
@@ -137,7 +137,7 @@
 						width: 100%;
 						path{
 							stroke: $darkTone;
-							stroke-width: 2px;
+							stroke-width: 2;
 						}
 					}
 					svg:hover{
