--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -6,6 +6,7 @@ chat.module{
 	left:inherit;
 	top:inherit;
 	width: 25%;
+	min-width: 400px;
 	height: 40vh;
 	box-shadow: 0 0;
 	display: flex;
@@ -18,6 +19,7 @@ chat.module{
 		width: 100%;
 		z-index: 3;
 		height: 20%;
+		max-height: 50px;
 		position: absolute;
 		/*#user {
 			flex-grow: 1;
@@ -127,7 +129,7 @@ chat.module{
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		margin-top: 7%;
+		margin-top:50px; 
 		.chatData{
 			align-self: flex-start;
 			margin-left: 10%;
@@ -139,6 +141,7 @@ chat.module{
 			overflow-y: auto;
 			overflow-x: hidden;
 			@include propertie(('background': linear-gradient(to left, $pastelTone 50% , $darkTone 50%)));
+			min-height: 200px;
 			div {
 				float: left;
 				width: 100%;
