--- a/scss/filesystem.scss
+++ b/scss/filesystem.scss
@@ -7,7 +7,7 @@ filesystem{
 		height: $menuHeight*3;
 		display: flex;
 		align-items: center;
-		li.track{svg{height: 100%;}}
+		li{svg{height: 100%;}}
 		li{
 			list-style: none;
 			flex-basis: 1;
@@ -33,6 +33,7 @@ filesystem{
 	}
 	ul#options {
 		width: 20%;
+		flex-direction: row-reverse;
 		li { font-weight: initial; }
 	}
 	main {
