--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -214,3 +214,14 @@ chat.module{
 		}
 	}
 }
+
+@media (max-width: 640px) {
+	chat.module{
+		width: 100%;
+		height: 100%;
+		min-width: 0;
+		#chats {
+			li {padding: 10px 0;}
+		}
+	}
+}
